<resources>
    <string name="app_name">RICKipedia</string>
    <string name="title_characters">Characters</string>
    <string name="title_locations">Locations</string>
    <string name="title_episodes">Episodes</string>
    <string name="fragment_character_details">Character details</string>
    <string name="name">Name: %1$s</string>
    <string name="species">Species: %1$s</string>
    <string name="status">Status: %1$s</string>
    <string name="gender">Gender: %1$s</string>
    <string name="character_image">Character image</string>
    <string name="dimension">Dimension: %1$s</string>
    <string name="type">Type: %1$s</string>
    <string name="episode_number">Episode: %1$s</string>
    <string name="air_date">Air date: %1$s</string>
    <string name="episode_name">%1$s</string>
    <string name="origin">Origin: %1$s</string>
    <string name="location">Location: %1$s</string>
    <string name="fragment_episode_details">Episode details</string>
    <string name="fragment_location_details">Location details</string>
    <string name="features">Features:</string>
    <string name="appears_in">Appears in:</string>
    <string name="inhabited_by">Inhabited by:</string>
</resources>