<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/navigation_characters">

    <fragment
        android:id="@+id/navigation_characters"
        android:name="com.grigorev.rickandmorty.ui.characters.CharactersFragment"
        android:label="@string/title_characters"
        tools:layout="@layout/fragment_characters" >
        <action
            android:id="@+id/action_navigation_characters_to_characterDetailsFragment"
            app:destination="@id/characterDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.grigorev.rickandmorty.ui.locations.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/navigation_episodes"
        android:name="com.grigorev.rickandmorty.ui.episodes.EpisodesFragment"
        android:label="@string/title_episodes"
        tools:layout="@layout/fragment_episodes" />
    <fragment
        android:id="@+id/characterDetailsFragment"
        android:name="com.grigorev.rickandmorty.ui.character_details.CharacterDetailsFragment"
        android:label="@string/fragment_character_details"
        tools:layout="@layout/fragment_character_details" />
</navigation>