<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/characterItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_padding">

        <ImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/character_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/avatarGuideline"
            android:layout_marginEnd="@dimen/avatar_end_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/avatarGuideline"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_percent="0.25"
             />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="16sp"
            android:text="@string/name"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/avatarGuideline"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/text_ellipsize_guideline"/>

        <TextView
            android:id="@+id/species"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/species"
            android:textColor="?android:textColorPrimary"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/avatarGuideline"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gender"

            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/avatarGuideline"
            app:layout_constraintTop_toBottomOf="@id/species" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="?android:textColorPrimary"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/avatarGuideline"
            app:layout_constraintTop_toBottomOf="@id/gender" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>